syntax = "proto3";

package history.v1;

option go_package = "github.com/mibrgmv/whoami-server/history/internal/protogen/history/v1;historyv1";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service HistoryService {
  rpc CreateItem(CreateItemRequest) returns (QuizCompletionHistoryItem) {}

  rpc BatchGetMyItems(BatchGetMyItemsRequest) returns (BatchGetItemsResponse) {
    option (google.api.http) = {
      get: "/api/v1/history/me"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "BearerAuth";
          value: {};
        }
      }
    };
  }

  rpc BatchGetItems(BatchGetItemsRequest) returns (BatchGetItemsResponse) {
    option (google.api.http) = {
      get: "/api/v1/history"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "BearerAuth";
          value: {};
        }
      }
    };
  }
}

message QuizCompletionHistoryItem {
  string id = 1;
  string user_id = 2;
  string quiz_id = 3;
  string quiz_result = 4;
}

message CreateItemRequest {
  QuizCompletionHistoryItem item = 1;
}

message BatchGetMyItemsRequest {
  repeated google.protobuf.StringValue quiz_ids = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message BatchGetItemsRequest {
  repeated google.protobuf.StringValue user_ids = 1;
  repeated google.protobuf.StringValue quiz_ids = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message BatchGetItemsResponse {
  repeated QuizCompletionHistoryItem items = 1;
  string next_page_token = 2;
}